# websockets_c

./: .clang-format  .clangd  .gitignore  bs.h  dyn_array.h  main.c  meson.build  utils.h  websocket.c  websocket.h
io/: internal_completions.c  internal_completions.h  io_uring.c  io_uring.h  linux.c  linux.h  unix_internal.c
libs/: allocator.h  base64.c  base64.h  bs.h  buff_io.h  crng_linux.c  dyn_array.h  extint.h  rng_splitmix64.h  rng_xoroshiro.c  rng_xoroshiro.h  sha1.h  utils.h
tests/: base64_test.c  test_sha1_hash.c
