project('websocket','c', default_options: ['c_std=c99','warning_level=everything' ])
add_project_arguments('-Wno-c++-compat', language: 'c')
lib = library('ws','./websocket.c', './libs/base64.c')
executable('base64test','./tests/base64_test.c', './libs/base64.c')
executable('websocket-impl','main.c', link_with:lib)
